Fix sidebars not collapsing when clicked but still active

--- a/src/style.css
+++ b/src/style.css
@@ -11,7 +11,7 @@
 }
 
 .sidebar-nav .open > ul:not(.app-sub-sidebar),
-.sidebar-nav .active > ul {
+.sidebar-nav .active:not(.hold) > ul {
   display: block;
 }
 
